2009-10-09  Darren Kenny  <darren.kenny@sun.com>

	* configure.in:
	  Bump to 0.99.92 for RC2

2009-10-09  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_condition_vbox.c, capplet/nwam_conn_conf_ip_panel.c,
	  capplet/nwam_conn_stat_panel.c, capplet/nwam_env_pref_dialog.c,
	  capplet/nwam_env_svc.c, capplet/nwam_location_dialog.c,
	  capplet/nwam_net_conf_panel.c, capplet/nwam_pref_dialog.c,
	  capplet/nwam_proxy_password_dialog.c, capplet/nwam_rules_dialog.c,
	  capplet/nwam_vpn_pref_dialog.c, capplet/nwam_wireless_chooser.c,
	  capplet/nwam_wireless_dialog.c, common/libnwamui.c,
	  daemon/status_icon_tooltip.c:
	  Don't include glade header anymore.
	* common/nwamui_daemon.c:
	  Don't emit wireless scan events if there isn't any wireless
	  interfaces.

2009-10-09  Darren Kenny  <darren.kenny@sun.com>

	* common/libnwamui.c: 
	  Getting an empty obj list is not a critical error in 
	  nwamui_util_copy_obj_list().
	* common/nwamui_daemon.c:
	  If we check ncus, and we see that it needs selection or a key, then
	  ensure the status reflects this.
	* common/nwamui_ncp.c: 
	  In nwamui_ncp_all_ncus_online, if the ncu_list is empty, then
	  obviously we're not on-line, so return FALSE.
	* daemon/status_icon.c: 
	  If we add an ncu, ensure that the no-ncu item is removed.
	  Also ensure that a wifi_control section made visible is also
	  sensitive.

2009-10-08  Darren Kenny  <darren.kenny@sun.com>

	* common/nwamui_daemon.c, common/nwamui_ncu.c:
	  Fix minor issue where an added wifi_fav could result in a duplicate
	  object for a WifiNet if it already existed in ncu cache.

2009-10-07  Darren Kenny  <darren.kenny@sun.com>

	* capplet/capplet-utils.c, capplet/main.c,
	  capplet/nwam_condition_vbox.c, capplet/nwam_conn_conf_ip_panel.c,
	  capplet/nwam_conn_stat_panel.c, capplet/nwam_env_pref_dialog.c,
	  capplet/nwam_location_dialog.c, capplet/nwam_net_conf_panel.c,
	  capplet/nwam_pref_dialog.c, capplet/nwam_vpn_pref_dialog.c,